# imagine-penguin

./: .env  .gitignore  README.md  ai_tools.py  build_package.sh  colors.py  main.py  main.spec  processing.py  pyproject.toml  simpleedit.py
scripts/: postinst.sh  postrm.sh
